# SandS

./: .gitignore  Cargo.toml  README.md  SandS.rc  build.rs
SandS/: Combo.cs  Config.cs  ConfigJsonContext.cs  DebugLog.cs  Engine.cs  KeySpec.cs  Native.cs  Program.cs  SandS.csproj  Sender.cs  Startup.cs  TrayApp.cs  TrayIcon.cs  Vk.cs  app.manifest
sands/: Cargo.toml
sands-rs/src/: tests.rs  tray.rs
sands/src/: bits.rs  icon.rs  log.rs  startup.rs  tests.rs  wide.rs
src/: config.rs  engine.rs  icon.rs  keyspec.rs  main.rs  sender.rs  tests.rs  vk.rs
tests/SandS.E2E/: Program.cs  SandS.E2E.csproj
tests/e2e/: Program.cs  e2e.csproj
