[package]
name = "sands"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]

[build-dependencies]
embed-resource = "3"

# 常駐アプリなのでサイズ最優先
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
